# syd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: git.rs  lib.rs  main.rs
